--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -15,26 +15,29 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div id="main" class="container">
-			</div>
-		</div>
-		<div class="container">
-			<div class="info">
-				<i class="material-icons medium">directions_run</i>
-				<h3 id="steps"></h3>
-			</div>
-			<div class="info">
-				<i class="material-icons medium">attach_money</i>
-				<h3 id="reward"></h3>
-			</div>
-			<div class="info">
-				<i id="reset" class="btn yellow waves-effect waves-light material-icons large" style="border-radius: 50%">autorenew</i>
+		<div id="main" class="container">
+			<div id="grid" class="container"></div>
+
+			<div id="info" class="container">
+				<div>
+					<div class="info">
+						<i class="material-icons medium">directions_run</i>
+						<h3 id="steps"></h3>
+					</div>
+					<div class="info">
+						<i class="material-icons medium">attach_money</i>
+						<h3 id="reward"></h3>
+					</div>
+				</div>
+				<div class="info">
+					<i id="reset" class="btn yellow waves-effect waves-light material-icons large" style="border-radius: 50%">autorenew</i>
+				</div>
 			</div>
 		</div>
 
 		<script type="text/javascript" src="/js/board.js"></script>
 		<script type="text/javascript" src="/js/player.js"></script>
+		<script type="text/javascript" src="/js/observations.js"></script>
 		<script type="text/javascript" src="/js/render.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
 	</body>
