--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -35,6 +35,7 @@
 			</div>
 		</div>
 
+		<script type="text/javascript" src="/js/presets.js"></script>
 		<script type="text/javascript" src="/js/board.js"></script>
 		<script type="text/javascript" src="/js/player.js"></script>
 		<script type="text/javascript" src="/js/observations.js"></script>
