--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -16,6 +16,41 @@
 
 	<body>
 		<div id="main" class="container">
+			<h4>Welcome to Griddy World!</h4>
+			<div id="header">
+				<p>Move around the grid to collect as many points as you can. You have a limited number of moves.</p>
+
+				<p>There are 3 kinds of cells you can encounter: <b>Nothing</b>, <b>Monsters</b>, or <b>Treasure</b>.</p>
+
+				<div class="icon-info">
+					<i class="material-icons">fiber_manual_record</i>
+					<p><b>Nothing</b> will give you <b>0</b> points.</p>
+				</div>
+				<div class="icon-info">
+					<i class="material-icons">mood_bad</i>
+					<p><b>Monsters</b> give you <b>-10</b> points.</p>
+				</div>
+				<div class="icon-info">
+					<i class="material-icons">monetization_on</i>
+					<p><b>Treasure</b> gives you <b>10</b> points.</p>
+				</div>
+
+				<p>
+					Each cell has a different probability of encountering each of the 3.
+					<br>
+					Each cell also displays the occurrences of each encounter you have faced in that cell.
+				</p>
+
+				<p>Hitting the reset button will reset your score and position, but the probabilities stay the same.</p>
+			</div>
+
+			<div style="display: flex; margin: 16px;">
+				<a id="header-toggle" class="btn waves-effect waves-light">
+						Hide info
+						<i class="material-icons right">arrow_drop_up</i>
+				</a>
+			</div>
+
 			<div id="grid" class="container"></div>
 
 			<div id="info" class="container">
@@ -40,6 +75,7 @@
 		<script type="text/javascript" src="/js/player.js"></script>
 		<script type="text/javascript" src="/js/observations.js"></script>
 		<script type="text/javascript" src="/js/render.js"></script>
+		<script type="text/javascript" src="/js/header.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
 	</body>
 </html>
