--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -76,6 +76,7 @@
 		<script type="text/javascript" src="/js/observations.js"></script>
 		<script type="text/javascript" src="/js/render.js"></script>
 		<script type="text/javascript" src="/js/header.js"></script>
+		<script type="text/javascript" src="/js/log.js"></script>
 		<script type="text/javascript" src="/js/app.js"></script>
 	</body>
 </html>
