Center grid on page

--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -51,7 +51,9 @@
 				</a>
 			</div>
 
-			<div id="grid" class="container"></div>
+			<div style="width: 100%; display: flex; justify-content: center;">
+				<div id="grid"></div>
+			</div>
 
 			<div id="info" class="container">
 				<div>
@@ -64,6 +66,7 @@
 						<h3 id="reward"></h3>
 					</div>
 				</div>
+
 				<div class="info">
 					<i id="reset" class="btn yellow waves-effect waves-light material-icons large" style="border-radius: 50%">autorenew</i>
 				</div>
