--- a/web/part2/index.html
+++ b/web/part2/index.html
@@ -70,6 +70,8 @@
 			</div>
 		</div>
 
+		<script type="text/javascript" src="/js/chartjs.js"></script>
+		<script type="text/javascript" src="/js/results.js"></script>
 		<script type="text/javascript" src="/js/presets.js"></script>
 		<script type="text/javascript" src="/js/board.js"></script>
 		<script type="text/javascript" src="/js/player.js"></script>
