Refactor web game part 1 for varying number of buttons

--- a/web/part1/index.html
+++ b/web/part1/index.html
@@ -14,29 +14,7 @@
 
 	<body>
 		<div id="main" class="container">
-			<div class="row">
-				<div id="btn1" class="btn waves-effect waves-light grid-item">
-					<h1>1</h1>
-					<p>Mean: 1</p>
-					<p>Variance: 1</p>
-				</div>
-				<div id="btn2" class="btn waves-effect waves-light grid-item">
-					<h1>2</h1>
-					<p>Mean: 1</p>
-					<p>Variance: 2</p>
-				</div>
-			</div>
-			<div class="row">
-				<div id="btn3" class="btn waves-effect waves-light grid-item">
-					<h1>3</h1>
-					<p>Mean: 1</p>
-					<p>Variance: 5</p>
-				</div>
-				<div id="btn4" class="btn waves-effect waves-light grid-item">
-					<h1>4</h1>
-					<p>Mean: 1.1</p>
-					<p>Variance: 100</p>
-				</div>
+			<div id="btnContainer" class="row">
 			</div>
 
 			<div id="info">
